# TP-zdielane-supervizne-riadenie

./: .gitignore  GSTReceiver.py  ROSReceiver.py  StreamPanel.py  app_the_god.py
DroneApp/: ImageFrame.py  Picture_Tester.py  UDPReceiver.py  main.py  pyproject.toml
DroneApp_v2/: README.md  main.py
DroneApp_v3/: DroneAppV3.py  DroneCom.py  DroneNode.py  GSTReceiver.py  MainWindow.py  NodeManager.py  ROSReceiver.py  StreamPanel.py
InputFromControllers/: Buttons_Input.py  GUI.py  logs.txt
InputFromControllers/filesForMaco/: MainWindow.py  StreamPanel_miro.py  VRInputThread.py  app_the_god.py
VR_PY_BRIDGE/: actions.json  logs.txt  register_manifest.py  vr_bridge.py  vr_inputbridge.vrmanifest
VR_PY_BRIDGE/bindings/: bindings_generic.json
World_Dron/: README.md
World_Dron/models/drone1/: model.sdf
World_Dron/models/drone2/: model.sdf
World_Dron/models/drone3/: model.sdf
World_Dron/worlds/: fei_lrs_gazebo_singleCamera.world
appka/: spustenie_drona.md
ros2_ws/: README.md
ros2_ws/missions/: drone1.csv  drone2.csv  drone3.csv  hangar_mavros_pos.csv  hangar_mission.csv  mission1.csv
ros2_ws/src/drone_udp_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/drone_udp_bridge/src/: drone_udp_brige_node.cpp
ros2_ws/src/lrs_mission/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/lrs_mission/include/lrs_mission/: mavros_interface.hpp  mission_executor.hpp  mission_loader.hpp
ros2_ws/src/lrs_mission/src/: main.cpp  mavros_interface.cpp  mission_executor.cpp  mission_loader.cpp
ros2_ws/src/swarm_mission/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/swarm_mission/include/swarm_mission/: drone_context.hpp  mavros_interface.hpp  mission_executor.hpp  mission_loader.hpp  mission_types.hpp  swarm_coordinator.hpp
ros2_ws/src/swarm_mission/src/: main.cpp  mavros_interface.cpp  mission_executor.cpp  mission_loader.cpp  swarm_coordinator.cpp  swarm_main.cpp
